2002-09-19  Sven Herzberg <herzi@gnome-de.org>

	* db/online/erweitern.php: Added debugging code.

2002-09-18  Christian Meyer  <chrisime@gnome.org>

	* db/online/suchen.php: Made the code more beautiful.

2002-09-18  Sven Herzberg <herzi@gnome-de.org>

	* db/online/index.php,
	* db/online/path.inc.php,
	* db/online/suchen.php,
	* db/online/special/bearbeiten.php,
	* db/online/special/erweitern.php,
	* db/online/special/hinzufuegen.php,
	* db/online/special/loeschen.php,
	* db/online/special/path.inc.php,
	* db/online/special/.htaccess: Added the files from the
	www.gnome-de.org website.

2002-08-16  Manuel Borchers  <webmaster@matronix.de>

	* db/add.php: replaced hardcoded table-names with vars

2002-08-05  Manuel Borchers  <webmaster@matronix.de>

	* db/tables.structure: Added structure for the db.

2002-06-13  Manuel Borchers  <webmaster@matronix.de>

	* db/config.php: Added configuration file for the db.

2002-06-13  Christian Meyer  <chrisime@gnome.org>

	* docs/gnome2.html: Added. Describes how to compile Gnome2.

2002-05-07  Christian Meyer  <chrisime@gnome.org>

	* db/common.php: Update from Manuel so that a line breaks after 40
	                 characters.

2002-03-25  Christian Meyer  <chrisime@gnome.org>

	* db/*.php: Added. That's our new translation database.
                    Before changing anything contact Manuel Borchers
                    <webmaster@matronix.de> or me.

2002-03-25  Christian Meyer  <chrisime@gnome.org>

	* admin/gnome2.html: Added. Page about compiling GNOME 2.0
	* admin/packages.html: Added.

2001-06-19  Karl Eichwalder  <ke@suse.de>

	* docs/gnome-de.sgml: Zoom issues.

2001-06-10  Karl Eichwalder  <ke@suse.de>

	* docs/gnome-de.sgml: Fix syntax.
	* More on "zoom".

2001-04-11  Christian Meyer  <chrisime@gnome.org>

	* admin/translator-list: Updated translation list.

2001-03-30  Christian Meyer  <chrisime@gnome.org>

	* admin/translator-list: Added Matthias Wimmer for gabber.
	                         Added guikachu.
