@@ -1,3 +1,7 @@
+2002-09-19  Christian Meyer  <chrisime@gnome.org>
+
+	* db/online/erweitern.php: Improved it just a bit.
+
 2002-09-19  Sven Herzberg <herzi@gnome-de.org>
 
 	* db/online/erweitern.php: Added debugging code.
